wip, at Demon Gate

--- a/approved.yaml
+++ b/approved.yaml
@@ -35,7 +35,7 @@ ogl5e:
 dungeonworldofficial:
   - "Dungeon World by Roll20"
   - "Dungeon World by Roll20"
-  - "Apocalypse World Engine"
+  - "Powered by the Apocalypse"
 
 gumshoeofficial:
   - "Gumshoe by Roll20"
@@ -77,7 +77,7 @@ bladesinthedarkadvancedofficial:
 bluebeardbride:
   - "Bluebeard's Bride"
   - "Bluebeard's Bride by Magpie Games"
-  - "Apocalypse World Engine"
+  - "Powered by the Apocalypse"
 
 earthdawnofficial:
   - "Earthdawn (FASA Official)"
@@ -172,9 +172,9 @@ aventures:
 
 #ADVENTURE CONQUEROR KING SYSTEM
 acks:
-- "ACKS"
-- "Adventure Conqueror King"
-- "Adventure Conqueror King System"
+  - "ACKS"
+  - "Adventure Conqueror King"
+  - "Adventure Conqueror King System"
 
 #AGE SYSTEM
 agesystem:
@@ -198,6 +198,12 @@ agonefr:
   - "Agone-(french)"
   - "Agone (French)"
   - "Agone"
+
+#AGON
+agon:
+  - Agon
+  - Agon
+  - Agon
 
 #ALIENS COLONIAL MARINES
 aliens:
@@ -229,167 +235,6 @@ lordsofgossamerandshadow:
   - "Lords of Gossamer and Shadow"
   - "Amber Diceless Roleplaying Game"
 
-#APOCALYPSE WORLD ENGINE
-actionmovieworld:
-  - "Action Movie World"
-  - "Action Movie World"
-  - "Apocalypse World Engine"
-
-apocalypseworld:
-  - "AW"
-  - "Apocalypse World 1st Edition"
-  - "Apocalypse World Engine"
-
-apocalypseworld2e:
-  - "AW2E"
-  - "Apocalypse World 2nd Edition"
-  - "Apocalypse World Engine"
-
-thebureau:
-  - "The Bureau"
-  - "The Bureau"
-  - "Apocalypse World Engine"
-
-cityofmist:
-  - "City-of-Mist"
-  - "City of Mist Community"
-  - "Apocalypse World Engine"
-
-cityofmistproper:
-  - "City Of Mist Offical"
-  - "City of Mist by Son of Oak Game Studio"
-  - "Apocalypse World Engine"
-
-dungeonworld:
-  - "DungeonWorld"
-  - "Dungeon World"
-  - "Apocalypse World Engine"
-
-dungeonworldch:
-  - "DungeonWorldChinese"
-  - "Dungeon World (Chinese)"
-  - "Apocalypse World Engine"
-
-dungeonworldfr:
-  - "DungeonWorldFrench"
-  - "Dungeon World (French)"
-  - "Apocalypse World Engine"
-
-dungeonworldbr:
-  - "Dungeon World Português"
-  - "Dungeon World (Portuguese/Brazilian)"
-  - "Apocalypse World Engine"
-
-dungeonworldsp:
-  - "DungeonWorldSpanish"
-  - "Dungeon World (Spanish)"
-  - "Apocalypse World Engine"
-
-epyllion:
-  - "Epyllion"
-  - "Epyllion"
-  - "Apocalypse World Engine"
-
-fellowship:
-  - "Fellowship"
-  - "Fellowship"
-  - "Apocalypse World Engine"
-
-ghostlines:
-  - "GhostLines"
-  - "Ghost Lines"
-  - "Apocalypse World Engine"
-
-impulsedrive:
-  - "Impulse_Drive"
-  - "Impulse Drive"
-  - "Apocalypse World Engine"
-
-legacylifeamongruins:
-  - Legacy - Life Among the Ruins
-  - Legacy - Life Among the Ruins
-  - "Apocalypse World Engine"
-
-librete:
-  - "Librete"
-  - "Librete"
-  - "Apocalypse World Engine"
-
-magicalfury:
-  - "Magical_Fury"
-  - "Magical Fury"
-  - "Apocalypse World Engine"
-
-masksnewgeneration:
-  - "Masks - A New Generation"
-  - "Masks: A New Generation"
-  - "Apocalypse World Engine"
-
-monsteroftheweek:
-  - "Monster of the Week"
-  - "Monster of the Week"
-  - "Apocalypse World Engine"
-
-monsterhearts2:
-  - "Monsterhearts-2"
-  - "Monsterhearts"
-  - "Apocalypse World Engine"
-
-nightwitches:
-  - "Night Witches"
-  - "Night Witches"
-  - "Apocalypse World Engine"
-
-sagaicelanders:
-  - "Sagas_Of_The_Icelanders"
-  - "Sagas of the Icelanders"
-  - "Apocalypse World Engine"
-
-thesprawladv:
-  - "The Sprawl"
-  - "The Sprawl"
-  - "Apocalypse World Engine"
-
-streetsofmarienburg:
-  - "Streets_of_Marienburg"
-  - "Streets of Marienburg"
-  - "Apocalypse World Engine"
-
-titanworld:
-  - "Titan_World-Unofficial_Attack_on_Titan_RPG"
-  - "Titan World"
-  - "Apocalypse World Engine"
-
-tremulus:
-  - "Tremulus"
-  - "Tremulus"
-  - "Apocalypse World Engine"
-
-urbanshadows:
-  - "Urban_Shadows"
-  - "Urban Shadows"
-  - "Apocalypse World Engine"
-
-unchartedworlds:
-  - "Uncharted Worlds"
-  - "Uncharted Worlds"
-  - "Apocalypse World Engine"
-
-theveil:
-  - "The Veil"
-  - "The Veil"
-  - "Apocalypse World Engine"
-
-worldsofperil:
-  - "Worlds in Peril"
-  - "Worlds in Peril"
-  - "Apocalypse World Engine"
-
-worldofdungeons:
-  - "World-of-Dungeons"
-  - "World of Dungeons"
-  - "Apocalypse World Engine"
-
 #ARCANE CODEX
 arcanecodex:
   - "ArcaneCodex"
@@ -400,6 +245,11 @@ arcanecodex:
 asandsh:
   - AS&SH
   - "Astonishing Swordsmen & Sorcerers of Hyperborea"
+  - "Arcanis Roleplaying Game"
+
+rottedcapes:
+  - Rotted Capes
+  - Rotted Capes
   - "Arcanis Roleplaying Game"
 
 #ARS MAGICA 5th EDITION
@@ -418,6 +268,11 @@ babylon5:
   - "Babylon 5"
   - "Babylon 5: 2nd Edition"
   - "Babylon 5 2nd Edition"
+
+barebonesfantasy:
+  - Barebones Fantasy RPG (00lite)
+  - Barebones Fantasy RPG
+  - "BareBones Fantasy Role Playing Game"
 
 #BASIC FANTASY ROLE-PLAYING GAME
 basicroleplayingexp:
@@ -550,6 +405,12 @@ betterangels:
   - "Better Angels"
   - "Better Angels"
 
+#BEYOND THE WALL AND OTHER ADVNETURES
+beyondthewall:
+  - Beyond the Wall and Other Adventures
+  - Beyond the Wall and Other Adventures
+  - "Beyond the Wall and Other Adventures"
+
 #BRIGANDYNE
 brigandynefr:
   - "Brigandyne"
@@ -596,6 +457,12 @@ ccvf:
   - "Capes, Cowls & Villains Foul"
   - "Capes, Cowls & Villains Foul"
 
+#CAPHARNAUM
+capharnaum:
+  - Capharnaum
+  - Capharnaum
+  - Capharnaum
+
 #CEPHEUS ENGINE
 cepheusengine:
   - "Cepheus Engine"
@@ -607,6 +474,12 @@ channelfearfr:
   - "channel fear"
   - "Channel Fear (French)"
   - "Channel Fear"
+
+#CHAOS SYSTEM
+demongate:
+  - Demon Gate
+  - Demon Gate
+  - "Chaos System"
 
 #CHRIS PERRIN'S MECHA
 chrisperrinsmecha:
@@ -1035,6 +908,12 @@ eclipsephasev2:
   - Eclipse Phase V2
   - Eclipse Phase
 
+#ELITE DANGEROUS ROLE PLAYING GAME
+elitedangerous:
+  - Elite Dangerous Role Playing Game
+  - Elite Dangerous RPG
+  - Elite Dangerous Role Playing Game
+
 #END OF THE WORLD
 ffgendoftheworld:
   - "FFG_End-of-the-World"
@@ -1086,39 +965,19 @@ fantasticheros:
   - "Fantastic Heroes & Witchery"
   - "Fantastic Heroes & Witchery"
 
-
 #FANTASY CRAFT
 fantasycraft:
   - "Fantasy_Craft"
   - "Fantasy Craft"
   - "Fantasy Craft"
 
+#FAST & LIGHT ADVNETURE GAMING SYSTEM
+flagsrpg:
+  - FLAGS_Custom
+  - FLAGS
+  - "Fast & Light Adventure Gaming System"
+
 #FATE
-fateaccelerated:
-  - "Fate_Accelerated"
-  - "Fate Accelerated Edition"
-  - "Fate"
-
-fateacelerado:
-  - "Fate Acelerado BR"
-  - "Fate Acelerado (Portuguese/Brazilian)"
-  - "Fate"
-
-fateacceleratedkr:
-  - "Fate_Accelerated_Kor"
-  - "Fate Accelerated Edition (Korean)"
-  - "Fate"
-
-fateacceleratedoakr:
-  - "Fate_Accelerated_Kor_Overman_Alliance"
-  - "Fate Accelerated Edition Over-man Alliance (Korean)"
-  - "Fate"
-
-fateacceleratedes:
-  - "Fate_Accelerated_ES"
-  - "Fate Accelerated Edition (Spanish)"
-  - "Fate"
-
 fatecorewithrolls:
   - "fate_core_with_rolls"
   - "Fate Core Edition (With Sheet Rolls)"
@@ -1164,19 +1023,9 @@ demonhunters:
   - "Demon Hunters"
   - "Fate"
 
-diaspora:
-  - "Diaspora"
-  - "Diaspora"
-  - "Fate"
-
 dresdenfiles:
   - "DFRPG"
   - "Dresden Files"
-  - "Fate"
-
-dresdenfilesaccelerated:
-  - "DresdenFilesAccelerated"
-  - "Dresden Files Accelerated"
   - "Fate"
 
 fatejadepunk:
@@ -1204,6 +1053,42 @@ turbofatede:
   - "Turbo Fate (German)"
   - "Fate"
 
+#FATE ACCELERATED
+breakfastcult:
+  - Breakfast Cult
+  - Breakfast Cult
+  - "Fate Accelerated"
+
+dresdenfilesaccelerated:
+  - "DresdenFilesAccelerated"
+  - "Dresden Files Accelerated"
+  - "Fate Accelerated"
+
+fateaccelerated:
+  - "Fate_Accelerated"
+  - "Fate Accelerated Edition"
+  - "Fate Accelerated"
+
+fateacelerado:
+  - "Fate Acelerado BR"
+  - "Fate Acelerado (Portuguese/Brazilian)"
+  - "Fate Accelerated"
+
+fateacceleratedkr:
+  - "Fate_Accelerated_Kor"
+  - "Fate Accelerated Edition (Korean)"
+  - "Fate Accelerated"
+
+fateacceleratedoakr:
+  - "Fate_Accelerated_Kor_Overman_Alliance"
+  - "Fate Accelerated Edition Over-man Alliance (Korean)"
+  - "Fate Accelerated"
+
+fateacceleratedes:
+  - "Fate_Accelerated_ES"
+  - "Fate Accelerated Edition (Spanish)"
+  - "Fate Accelerated" 
+
 #FENG SHUI
 fengshui:
   - "Feng Shui"
@@ -1220,6 +1105,12 @@ ffrpg3rd:
   - "FFRPG Third Edition"
   - "Final Fantasy RPG: 3rd Edition"
   - "Final Fantasy Roleplaying Game 3rd Edition"
+
+#FIRE EMBLEM d20
+fireemblemtt:
+  - Xeohelios' Fire Emblem Tabletop
+  - Fire Emblem Tabletop (by Xeohelios)
+  - "Fire Emblem d20"
 
 #FLASHING BLADES
 flashingblades:
@@ -1261,6 +1152,12 @@ psipunk:
   - "Psi-Punk"
   - "Psi-Punk"
   - "The Fugue"
+
+#GENESYS
+genesys:
+  - Genesys-RPG
+  - Genesys
+  - Genesys
 
 #KULT 3rd EDITION
 kult3e:
@@ -1410,7 +1307,7 @@ hcsvntdracones:
   - "Hc Svnt Dracones"
   - "Hc Svnt Dracones"
 
-#ELLYWOOD
+#HELLYWOOD
 hellywood:
   - "Hellywood"
   - "Hellywood"
@@ -1455,6 +1352,12 @@ infected:
   - "Infected!"
   - "Infected!"
   - "Immersion RPG Rules System"
+
+#IN NOMINE
+innomine:
+  - In-Nomine-Char-Sheet
+  - In Nomine
+  - "In Nomine"
 
 #IN NOMINE SATANIS 3rd Edition
 innominesatanis:
@@ -1518,6 +1421,12 @@ knightfr:
   - "Knight (French)"
   - "Knight"
 
+#LADY BLACKBIRD
+ladyblackbird:
+  - Lady Blackbird
+  - Lady Blackbird
+  - Lady Blackbird
+
 #LAMES DU CARDINAL
 lamesducardinalfr:
   - "Lames du Cardinal"
@@ -1552,6 +1461,12 @@ lowfantasygaming:
   - "Low Fantasy Gaming"
   - "Low Fantasy Gaming"
   - "Low Fantasy Gaming"
+
+#LYCEENNES
+lyceennes:
+  - Lyceennes
+  - Lyceennes
+  - Lyceennes
 
 #MACCHIATO MONSTERS
 macchiatomonsters:
@@ -1738,6 +1653,12 @@ mutantepoch:
   - "The Mutant Epoch"
   - "Outland System"
 
+#OVER THE EDGE 2nd EDITION
+overtheedge2e:
+  - Over the Edge 2e
+  - Over the Edge (2e)
+  - "Over the Edge 2nd Edition"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -1762,6 +1683,11 @@ pathofpaper:
   - "Path of Paper"
 
 #PATHFINDER
+ffd20:
+  - "FFD20"
+  - "Final Fantasy d20"
+  - "Pathfinder"
+
 pathfinderneceros:
   - "Pathfinder Community"
   - "Pathfinder Community"
@@ -1843,6 +1769,172 @@ portesmonstrestresors:
   - "Portes Monstres Tresors (French)"
   - "Portes Monstres Tresors"
 
+#POWERED BY THE APOCALYPSE
+actionmovieworld:
+  - "Action Movie World"
+  - "Action Movie World"
+  - "Powered by the Apocalypse"
+
+alasfortheawfulsea:
+  - Alas For The Awful Sea
+  - Alas For The Awful Sea
+  - "Powered by the Apocalypse"
+
+apocalypseworld:
+  - "AW"
+  - "Apocalypse World 1st Edition"
+  - "Powered by the Apocalypse"
+
+apocalypseworld2e:
+  - "AW2E"
+  - "Apocalypse World 2nd Edition"
+  - "Powered by the Apocalypse"
+
+thebureau:
+  - "The Bureau"
+  - "The Bureau"
+  - "Powered by the Apocalypse"
+
+cityofmist:
+  - "City-of-Mist"
+  - "City of Mist Community"
+  - "Powered by the Apocalypse"
+
+cityofmistproper:
+  - "City Of Mist Offical"
+  - "City of Mist by Son of Oak Game Studio"
+  - "Powered by the Apocalypse"
+
+dungeonworld:
+  - "DungeonWorld"
+  - "Dungeon World"
+  - "Powered by the Apocalypse"
+
+dungeonworldch:
+  - "DungeonWorldChinese"
+  - "Dungeon World (Chinese)"
+  - "Powered by the Apocalypse"
+
+dungeonworldfr:
+  - "DungeonWorldFrench"
+  - "Dungeon World (French)"
+  - "Powered by the Apocalypse"
+
+dungeonworldbr:
+  - "Dungeon World Português"
+  - "Dungeon World (Portuguese/Brazilian)"
+  - "Powered by the Apocalypse"
+
+dungeonworldsp:
+  - "DungeonWorldSpanish"
+  - "Dungeon World (Spanish)"
+  - "Powered by the Apocalypse"
+
+epyllion:
+  - "Epyllion"
+  - "Epyllion"
+  - "Powered by the Apocalypse"
+
+fellowship:
+  - "Fellowship"
+  - "Fellowship"
+  - "Powered by the Apocalypse"
+
+ghostlines:
+  - "GhostLines"
+  - "Ghost Lines"
+  - "Powered by the Apocalypse"
+
+impulsedrive:
+  - "Impulse_Drive"
+  - "Impulse Drive"
+  - "Powered by the Apocalypse"
+
+legacylifeamongruins:
+  - Legacy - Life Among the Ruins
+  - Legacy - Life Among the Ruins
+  - "Powered by the Apocalypse"
+
+librete:
+  - "Librete"
+  - "Librete"
+  - "Powered by the Apocalypse"
+
+magicalfury:
+  - "Magical_Fury"
+  - "Magical Fury"
+  - "Powered by the Apocalypse"
+
+masksnewgeneration:
+  - "Masks - A New Generation"
+  - "Masks: A New Generation"
+  - "Powered by the Apocalypse"
+
+monsteroftheweek:
+  - "Monster of the Week"
+  - "Monster of the Week"
+  - "Powered by the Apocalypse"
+
+monsterhearts2:
+  - "Monsterhearts-2"
+  - "Monsterhearts"
+  - "Powered by the Apocalypse"
+
+nightwitches:
+  - "Night Witches"
+  - "Night Witches"
+  - "Powered by the Apocalypse"
+
+sagaicelanders:
+  - "Sagas_Of_The_Icelanders"
+  - "Sagas of the Icelanders"
+  - "Powered by the Apocalypse"
+
+thesprawladv:
+  - "The Sprawl"
+  - "The Sprawl"
+  - "Powered by the Apocalypse"
+
+streetsofmarienburg:
+  - "Streets_of_Marienburg"
+  - "Streets of Marienburg"
+  - "Powered by the Apocalypse"
+
+titanworld:
+  - "Titan_World-Unofficial_Attack_on_Titan_RPG"
+  - "Titan World"
+  - "Powered by the Apocalypse"
+
+tremulus:
+  - "Tremulus"
+  - "Tremulus"
+  - "Powered by the Apocalypse"
+
+urbanshadows:
+  - "Urban_Shadows"
+  - "Urban Shadows"
+  - "Powered by the Apocalypse"
+
+unchartedworlds:
+  - "Uncharted Worlds"
+  - "Uncharted Worlds"
+  - "Powered by the Apocalypse"
+
+theveil:
+  - "The Veil"
+  - "The Veil"
+  - "Powered by the Apocalypse"
+
+worldsofperil:
+  - "Worlds in Peril"
+  - "Worlds in Peril"
+  - "Powered by the Apocalypse"
+
+worldofdungeons:
+  - "World-of-Dungeons"
+  - "World of Dungeons"
+  - "Powered by the Apocalypse"
+
 #PROWLERS & PARAGONS ULTIMATE EDITION
 prowlersandparagons:
   - "Prowlers-n-Paragons"
@@ -1888,6 +1980,12 @@ revededragonfr:
   - "Reve de Dragon - french"
   - "Reve de Dragon (French)"
   - "Reve de Dragon"
+
+#REVOLUTION D100
+revolutiond100:
+  - revolutiond100
+  - Revolution D100
+  - Revolution D100
 
 #RISUS SPACE OPERA
 risus: 
@@ -1951,6 +2049,12 @@ marvelsaga:
   - "Marvel Saga"
   - "SAGA"
 
+#SAGABONR ROLEPLAYING SYSTEM
+sagaborn:
+  - SagaBorn
+  - SagaBorn
+  - "SagaBorn Roleplaying System"
+
 #SAGA MACHINE
 dimeadventures:
   - "Dime Adventures"
@@ -1998,6 +2102,12 @@ scarletheroes:
   - "Scarlet Heros"
   - "Scarlet Heroes"
   - "Scarlet Heroes"
+
+#SENTINEL COMICS THE ROLEPLAYING GAME
+sentinalcomics:
+  - Sentinel Comics RPG
+  - Sentinel Comics RPG
+  - "Sentinel Comics: the Roleplaying Game"
 
 #SEVENTH SEA
 7thsea:
@@ -2147,6 +2257,12 @@ otherdust:
   - "Other_Dust"
   - "Other Dust"
   - "Stars Without Number"
+
+#STARCRAFT RPG
+starcraftrpg:
+  - Starcraft RPG
+  - Starcraft RPG
+  - "StarCraft Roleplaying Game"
 
 #STARFINDER
 starfindersimple:
@@ -2358,6 +2474,12 @@ blueplanetv2:
   - "Blue Planet"
   - "Synergy Game System"
 
+#TAGMAR
+tagmar:
+  - Tagmar
+  - Tagmar
+  - Tagmar
+
 #TAILS OF EQUESTRIA
 tailsofequestria:
   - "TailsOfEquestria"
@@ -2393,6 +2515,12 @@ morrowproject:
   - "MorrowProject4e"
   - "Morrow Project"
   - "TimeLine System"
+
+#TINY FRONTIERS
+mechaandmonsters:
+  - MechaAndMonsters
+  - Mecha and Monsters
+  - "Tiny Frontiers"
 
 #TOON
 toon:
@@ -2741,7 +2869,7 @@ werewolfapoc2e:
 monsterhearts: 
   - Monsterhearts-Simple
   - Monsterhearts
-  - "Apocalypse World Engine"
+  - "Powered by the Apocalypse"
   - hidden
   
 starmarxfr: 
@@ -2777,7 +2905,7 @@ shadowrunanarchy:
 thesprawl:
   - "The_Sprawl"
   - "The Sprawl"
-  - "Apocalypse World Engine"
+  - "Powered by the Apocalypse"
   - "hidden"
 
 basicfantasy:
@@ -3093,10 +3221,13 @@ thefade:
   - "hidden"
 
 acpd:
-- "ACPD"
-- "Atlantic City Police Department"
-- "Atlantic City Police Department"
-- "hidden"
+  - "ACPD"
+  - "Atlantic City Police Department"
+  - "Atlantic City Police Department"
+  - "hidden"
 
-
-
+diaspora:
+  - "Diaspora"
+  - "Diaspora"
+  - "Fate"
+  - "hidden"
