up to Solar Echoes

--- a/approved.yaml
+++ b/approved.yaml
@@ -387,6 +387,12 @@ bashultimateed:
   - "BASH Ultimate Edition"
   - "BASH Ultimate Edition"
 
+#BATTLE CENTURY G
+battlecenturyg:
+  - Battle Century G
+  - Battle Century G
+  - Battle Century G
+
 #BATTLE TECH 4th EDITION
 battletech:
   - "BattleTech-A-Time-of-War"
@@ -476,6 +482,11 @@ channelfearfr:
   - "Channel Fear"
 
 #CHAOS SYSTEM
+chaos6010:
+  - Chaos 6010
+  - Chaos 6010
+  - "Chaos System"
+
 demongate:
   - Demon Gate
   - Demon Gate
@@ -702,6 +713,12 @@ digitalshades:
   - "Digital Shades"
   - "Digital Shades"
 
+#DK SYSTEM
+manteldacier:
+  - Mantel dAcier
+  - Mantel d'Acier
+  - "DK System"
+
 #DOGS IN THE VINEYARD
 dogsinthevineyard:
   - "Dogs-in-the-Vineyard"
@@ -718,6 +735,12 @@ dragondeponche2:
   - "Dragon De Poche 2"
   - "Dragon De Poche 2 (French)"
   - "Dragon De Poche"
+
+#DREAMCHASTER
+dreamchaser:
+  - Dreamchaser
+  - Dreamchaser
+  - Dreamchaser
 
 #D&D RETROCLONE
 lotfp:
@@ -1142,6 +1165,11 @@ friponeesrpg:
   - "Friponnes (French)"
   - "Freeform Universal"
 
+ohet:
+  - "OHET"
+  - "Outstanding Heroes and Extraordinary Threats"
+  - "Freeform Universal"
+
 #FUGUE
 fugue:
   - "Fugue"
@@ -1209,6 +1237,12 @@ godbound:
   - "Godbound"
   - "Godbound"
   - "Godbound"
+
+#GHOST OPS
+ghostops:
+  - Ghost-Ops-RPG
+  - Ghost Ops
+  - "Ghost Ops"
 
 #GHOSTBUSTERS
 ghostbusters:
@@ -1371,6 +1405,12 @@ insmv5efr:
   - "In Nomine Satanis / Magna Veritas 5th Edition (French)"
   - "In Nomine Satanis 5th Edition"
 
+#INDIE HACK ENGINE
+theindiehack:
+  - TIH
+  - The Indie Hack
+  - "Indie Hack Engine"
+
 #INDEX CARD RPG Core 2E
 icrpg:
   - "ICRPG"
@@ -1433,12 +1473,25 @@ lamesducardinalfr:
   - "Lames du Cardinal (French)"
   - "Lames du Cardinal"
 
+#LASER ANF FEELINGS
+lasersandfeelings:
+  - Lasers and Feelings
+  - Lasers and Feelings
+  - Lasers and Feelings
+
 #LES CHANTS DE LOSS
 leschantsdeloss:
   - "Les Chants de Loss"
   - "Les Chants de Loss"
   - "Les Chants de Loss"
 
+#LES ROYAUMES DE MIDGARD
+lesroyaumesdemidgard:
+  - "Les Royaumes de Midgard"
+  - "Les Royaumes de Midgard"
+  - "Les Royaumes de Midgard"
+
+#MAGUS
 magus:
   - "MAGUS_UTK"
   - "M.A.G.U.S. - Új Törvénykönyv (Hungarian)"
@@ -1717,6 +1770,12 @@ tormentarpgnew:
   - TormentaRPG-PDF_Based
   - Tormenta RPG (New)
   - Pathfinder
+
+#PAVILLON NOIR 2nd EDITION
+pavillonnoir:
+  - Pavillon Noir 2
+  - Pavillon Noir 2e
+  - "Pavillon Noir 2nd Edition"
 
 #PENDRAGON
 pendragon:
@@ -2191,6 +2250,12 @@ spelltherpg:
   - "Spell: the RPG"
   - "Spell: the RPG"
 
+#SPIRE
+spire:
+  - Spire
+  - Spire
+  - Spire
+
 #SPLITTERMOND
 splittermond:
   - "Splittermond"
@@ -2203,11 +2268,23 @@ spycraft:
   - "Spycraft 2.0"
   - "Spycraft"
 
+#SOLAR ECHOES
+solarechoes:
+  - "Solar Echoes"
+  - "Solar Echoes"
+  - "Solar Echoes"
+
 #SOLIPSTRY
 solipstry:
   - "Solipstry"
   - "Solipstry"
   - "Solipstry"
+
+#STANDARD RPG SYSTEM
+metallicguardian:
+  - "Metallic Guardian"
+  - "Metallic Guardian RPG"
+  - "Standard RPG System"
 
 #STAR FRONTIERS
 starfrontiers2:
@@ -2504,6 +2581,18 @@ tenrazero:
   - "Tenra Bansho Zero"
   - "Tenra Bansho Zero"
 
+#TESORO Y GLORIA
+tesoroygloria:
+  - "Tesoro y Gloria"
+  - "Tesoro y Gloria"
+  - "Tesoro y Gloria"
+
+#THIS IS NOT A TEST
+thisisnotatest:
+  - This_Is_Not_A_Test
+  - This Is Not A Test
+  - This Is Not A Test
+
 #TIGRES VOLANtS
 tigresvolants:
   - "tigres_volants"
@@ -2515,6 +2604,12 @@ morrowproject:
   - "MorrowProject4e"
   - "Morrow Project"
   - "TimeLine System"
+
+#TINY
+tiny:
+  - "Tiny"
+  - "Tiny"
+  - "Tiny"
 
 #TINY FRONTIERS
 mechaandmonsters:
@@ -2565,6 +2660,12 @@ bigeyessmallmouth3esimple:
   - "BESM3rd"
   - "Big Eyes Small Mouth: 3rd Edition (Simple)"
   - "Tri-Stat dX"
+
+#TROLLBABE
+trollbabe:
+  - Trollbabe
+  - Trollbabe
+  - Trollbabe
 
 #TRUE 20
 true20:
@@ -2640,6 +2741,13 @@ victoriana2e:
   - "Victoriana 2ed"
   - "Victoriana 2nd Edition"
   - "Victoriana 2nd Edition"
+
+#VIEJA ESCUELA
+viejaescuela:
+  - "Vieja-escuela"
+  - "Vieja Escuela"
+  - "Vieja Escuela"
+
 
 #VOID
 thevoid:
