cleaned up the approved list

--- a/approved.yaml
+++ b/approved.yaml
@@ -141,6 +141,12 @@ startrek2d20:
   - "Star Trek Adventures"
   - "2d20"
 
+#3D20 SYSTEM
+neuroshima:
+  - "Neuroshima"
+  - "Neuroshima"
+  - "3d20 System"
+
 #3D&T ALPHA
 threedandtalpha:
   - "3D&T_ALPHA"
@@ -163,6 +169,18 @@ aboreade:
   - "Aborea"
   - "Aborea (German)"
   - "Aborea"
+
+#ABSTRACT DUNGONE
+abstractdungeon:
+  - "Abstract Dungeon (FR base)"
+  - "Abstract Dungeon"
+  - "Abstract Dungeon"
+
+#THE ADVANCED
+advancedpandemonium:
+  - "The ADVANCED Pandemonium"
+  - "The ADVANCED: Pandemonium"
+  - "The ADVANCED"
 
 #ADVENTURES
 aventures:
@@ -235,6 +253,12 @@ lordsofgossamerandshadow:
   - "Lords of Gossamer and Shadow"
   - "Amber Diceless Roleplaying Game"
 
+#AQUELARRE
+aquelarre:
+  - "Aquelarre"
+  - "Aquelarre"
+  - "Aquelarre"
+
 #ARCANE CODEX
 arcanecodex:
   - "ArcaneCodex"
@@ -273,6 +297,12 @@ barebonesfantasy:
   - Barebones Fantasy RPG (00lite)
   - Barebones Fantasy RPG
   - "BareBones Fantasy Role Playing Game"
+
+#BAKER STREET RPG
+bakerstreetrpg:
+  - "BakerStreet"
+  - "Baker Street RPG"
+  - "Baker Street"
 
 #BASIC FANTASY ROLE-PLAYING GAME
 basicroleplayingexp:
@@ -349,6 +379,11 @@ drakarochdemoner:
 thelaundry:
   - "The Laundry"
   - "The Laundry"
+  - "Basic Roleplaying System"
+
+mutant1984:
+  - "Mutant(1984)"
+  - "Mutant (1984)"
   - "Basic Roleplaying System"
 
 runequest3ed:
@@ -469,11 +504,23 @@ capharnaum:
   - Capharnaum
   - Capharnaum
 
+#CELERITY
+celerity:
+  - "Celerity"
+  - "Celerity"
+  - "Celerity"
+
 #CEPHEUS ENGINE
 cepheusengine:
   - "Cepheus Engine"
   - "Cepheus Engine"
   - "Cepheus Engine"
+
+#CDB ENGINE
+cdbengine: 
+  - "CdB Engine"
+  - "CdB Engine"
+  - "CdB Engine"
 
 #CHANNEL FEAR
 channelfearfr:
@@ -547,6 +594,11 @@ continuum:
 cops:
   - "COPS"
   - "COPS"
+  - "C.O.P.S"
+
+terre2:
+  - "Terre 2"
+  - "Terre 2"
   - "C.O.P.S"
 
 #CORTEX PLUS
@@ -624,12 +676,12 @@ d6space:
 starwars30th:
   - Star Wars 30th Anniversary Edition
   - Star Wars 30th Anniversary Edition
-  - D6
+  - "D6"
 
 starwarsd6:
   - "D6StarWars"
   - "Star Wars: (D6) West End Games"
-  - "D6 System"
+  - "D6"
 
 #D20 MODERN
 d20modern:
@@ -707,6 +759,12 @@ degenesisadvanced:
   - "Degenesis (Advanced)"
   - "Degenesis"
 
+#DEVASTRA
+devastra:
+  - "Devâstra"
+  - "Devâstra"
+  - "Devâstra"
+
 #DIGITAL SHADES
 digitalshades:
   - "Digital Shades"
@@ -735,6 +793,18 @@ dragondeponche2:
   - "Dragon De Poche 2"
   - "Dragon De Poche 2 (French)"
   - "Dragon De Poche"
+
+#DRAGONCRY
+dragoncry:
+  - "Dragoncry"
+  - "Dragoncry"
+  - "Dragoncry"
+
+#DRAMASYSTEM
+dramasystem:
+  - "Dramasystem"
+  - "Dramasystem"
+  - "Dramasystem"
 
 #DREAMCHASTER
 dreamchaser:
@@ -908,6 +978,12 @@ dungeonsquad:
   - "Dungeon Squad"
   - "Dungeon Squad"
 
+#DUTY & HONOR
+dutyandhonor:
+  - "DutyandHonourBeattoQuarters"
+  - "Duty & Honour / Beat to Quarters"
+  - "Duty & Honor"
+
 #EABA
 endallbeallrpg:
   - "End All Be All RPG - Roleplaying without Limits"
@@ -931,11 +1007,29 @@ eclipsephasev2:
   - Eclipse Phase V2
   - Eclipse Phase
 
+#ELEMENTAL
+elementalrpg:
+  - "Elemental"
+  - "Elemental"
+  - "Elemental"
+
 #ELITE DANGEROUS ROLE PLAYING GAME
 elitedangerous:
   - Elite Dangerous Role Playing Game
   - Elite Dangerous RPG
   - Elite Dangerous Role Playing Game
+
+#ELLIPSES RPG
+ellipses:
+  - "Ellipses"
+  - "Ellipses"
+  - "Ellipses RPG"
+
+#EN LA OSCURIDAD
+intothedark:
+  - "Into The Dark"
+  - "Into The Dark"
+  - "En la oscuridad"
 
 #END OF THE WORLD
 ffgendoftheworld:
@@ -947,6 +1041,12 @@ engineheart:
   - "EngineHeart"
   - "Engine Heart"
   - "Engine Heart"
+
+#ERA THE CONSORTIUM
+eratheconsortium:
+  - "EratheConsortium"
+  - "Era the Consortium"
+  - "Era the Consortium"
 
 #THE FADE
 thefade2:
@@ -993,6 +1093,12 @@ fantasycraft:
   - "Fantasy_Craft"
   - "Fantasy Craft"
   - "Fantasy Craft"
+
+#THE FANTASY TRIP
+thefantasytrip:
+  - "The Fantasy Trip"
+  - "The Fantasy Trip"
+  - "The Fantasy Trip"
 
 #FAST & LIGHT ADVNETURE GAMING SYSTEM
 flagsrpg:
@@ -1153,11 +1259,28 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Forged in the Dark"
 
+iwwlab:
+  - "In Which We Live And Breathe"
+  - "In Which We Live And Breathe"
+  - "Forged in the Dark"
+
 #FRAGGED EMPIRE
 fraggedempire:
   - "Fragged-Empire"
   - "Fragged Empire"
   - "Fragged Empire"
+
+#FRAGMENTOS
+fragmentos:
+  - "Fragmentos"
+  - "Fragmentos"
+  - "Fragmentos"
+
+#FREE SPACER
+freespacer:
+  - "Free Spacer"
+  - "Free Spacer"
+  - "Free Spacer"
 
 #FREEFORM UNIVERSAL
 friponeesrpg:
@@ -1180,24 +1303,6 @@ psipunk:
   - "Psi-Punk"
   - "Psi-Punk"
   - "The Fugue"
-
-#GENESYS
-genesys:
-  - Genesys-RPG
-  - Genesys
-  - Genesys
-
-#KULT 3rd EDITION
-kult3e:
-  - "Kult"
-  - "Kult: 3rd Edition"
-  - "Kult 3rd Edition"
-
-#KULT 4th EDITION
-kultdivinitylost:
-  - "Kult Divinity Lost"
-  - "Kult Divinity Lost"
-  - "Kult 4th Edition"
 
 #FUZION
 fuzion:
@@ -1238,6 +1343,12 @@ godbound:
   - "Godbound"
   - "Godbound"
 
+#GENESYS
+genesys:
+  - Genesys-RPG
+  - Genesys
+  - Genesys
+
 #GHOST OPS
 ghostops:
   - Ghost-Ops-RPG
@@ -1262,6 +1373,11 @@ guildesqdo:
   - "Guildes"
 
 #GUMSHOE
+ashenstars:
+  - "Ashen_Stars"
+  - "Ashen Stars"
+  - "GUMSHOE"
+
 nightblackagents:
   - "Night Black Agents gumshoe"
   - "Night Black Agents"
@@ -1293,6 +1409,12 @@ hackmaster5e:
   - "HackMaster_5E"
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
+
+#HAKAI KOUSEN
+hakaikousen:
+  - "Hakai Kousen"
+  - "Hakai Kousen"
+  - "Hakai Kousen"
 
 #HALO MYTHIC
 halomythic:
@@ -1363,6 +1485,18 @@ heroquestglorantha:
   - Heroquest_Glorantha
   - HeroQuest Glorantha
   - "Hero Quest"
+
+#HERO SYSTEM 6th EDITION
+herosystem6e:
+  - "HeroSystem6e"
+  - "Hero System 6e"
+  - "Hero System 6th Edition"
+
+#HITOS
+hitos:
+  - "Hitos"
+  - "Hitos"
+  - "Hitos"
 
 #HONEY HEIST
 honeyheist:
@@ -1438,17 +1572,41 @@ cyberpunk2k20v2:
    - "Cyberpunk2k20 (Version 2)"
    - "Interlock System"
 
+#KIDS ON BIKES
+kidsonbikes:
+  - "Kids-on-Bikes"
+  - "Kids on Bikes"
+  - "Kids on Bikes"
+
 #KROMORE
 kromore:
   - "Kromore"
   - "Kromore"
   - "Kromore"
 
+#KULT 3rd EDITION
+kult3e:
+  - "Kult"
+  - "Kult: 3rd Edition"
+  - "Kult 3rd Edition"
+
+#KULT 4th EDITION
+kultdivinitylost:
+  - "Kult Divinity Lost"
+  - "Kult Divinity Lost"
+  - "Kult 4th Edition"
+
 #KURO
 kuro:
   - "Kuro"
   - "Kuro"
   - "Kuro"
+
+#INSANE
+insane:
+  - "inSANe auto cal"
+  - "inSANe"
+  - "inSANe"
 
 #IRONCLAW
 ironclase:
@@ -1460,6 +1618,24 @@ knightfr:
   - "Knight"
   - "Knight (French)"
   - "Knight"
+
+#IRONSWORN
+ironsworn:
+  - "Ironsworn"
+  - "Ironsworn"
+  - "Ironsworn"
+
+#JOJO's BIZARRE TABLETOP
+jojobizarretabletop:
+  - "Jojo's Bizarre Tabletop"
+  - "Jojo's Bizarre Tabletop"
+  - "Jojo's Bizarre Tabletop"
+
+#LANCER
+lancer:
+  - "LANCER RPG (1.8)"
+  - "LancerRPG"
+  - "Lancer"
 
 #LADY BLACKBIRD
 ladyblackbird:
@@ -1491,12 +1667,6 @@ lesroyaumesdemidgard:
   - "Les Royaumes de Midgard"
   - "Les Royaumes de Midgard"
 
-#MAGUS
-magus:
-  - "MAGUS_UTK"
-  - "M.A.G.U.S. - Új Törvénykönyv (Hungarian)"
-  - "M.A.G.U.S."
-
 #LITTLE FEARS
 littlefearsnightmareed:
   - "Little-Fears-Nightmare-Edition"
@@ -1527,6 +1697,12 @@ macchiatomonsters:
   - "Macchiato Monsters"
   - "Macchiato Monsters"
 
+#MAGUS
+magus:
+  - "MAGUS_UTK"
+  - "M.A.G.U.S. - Új Törvénykönyv (Hungarian)"
+  - "M.A.G.U.S."
+
 #MAID
 maidrpg:
   - "Maid"
@@ -1538,6 +1714,12 @@ marvelsh:
   - "MarvelSH"
   - "Marvel Superheroes"
   - "Marvel Superheroes"
+
+#MAYFAIR EXPONENTIAL GAME SYSTEM
+dcheroes:
+  - "DC_Heroes_MEGS"
+  - "DC Heroes"
+  - "Mayfair Exponential Game System"
 
 #MEGAVERSAL
 palladiumfantasy1e:
@@ -1605,6 +1787,12 @@ mordiou:
   - "Mordiou! (French)"
   - "Mordiou"
 
+#MORTALLY BANKRUPT
+mortallybankrupt:
+  - "Mortally Bankrupt"
+  - "Mortally Bankrupt"
+  - "Mortally Bankrupt"
+
 #MOTHERSHIP
 mothership:
   - "Mothership"
@@ -1650,6 +1838,18 @@ narrativesunlimitedd10:
   - "NarrativesUnlimitedD10"
   - "Narratives Unlimited D10"
   - "Narratives Unlimited D10"
+
+#NECHRONICA
+nechronica:
+  - "nechronica"
+  - "Nechronica -The Long Long Sequel-"
+  - "Nechronica"
+
+#NO RETURN
+noreturn:
+  - "NoReturn"
+  - "NoReturn"
+  - "NoReturn"
 
 #OLD DRAGON
 olddragon:
@@ -1711,6 +1911,12 @@ overtheedge2e:
   - Over the Edge 2e
   - Over the Edge (2e)
   - "Over the Edge 2nd Edition"
+
+#ONE DICE
+onedice:
+  - "OneDice"
+  - "OneDice"
+  - "OneDice"
 
 #PARANOIA
 paranoia:
@@ -1821,6 +2027,12 @@ polaris:
   - "Polaris"
   - "Polaris"
   - "Polaris"
+
+#PONY TALES ASPIRATIONS OF HARMONY
+ponytalescommunity:
+  - "PonytalesSheet"
+  - "Pony Tales: Aspirations of Harmony"
+  - "Pony Tales Aspirations of Harmony"
 
 #PORTES MONSTRES TRESORS
 portesmonstrestresors:
@@ -1944,10 +2156,20 @@ nightwitches:
   - "Night Witches"
   - "Powered by the Apocalypse"
 
+offworlders:
+  - "Offworlders"
+  - "Offworlders"
+  - "Powered by the Apocalypse"
+
 sagaicelanders:
   - "Sagas_Of_The_Icelanders"
   - "Sagas of the Icelanders"
   - "Powered by the Apocalypse"
+
+scup:
+  - "SCUP"
+  - "The Sword, The Crown, and The Unspeakable Power"
+  - "Powered by the Apocalypse" 
 
 thesprawladv:
   - "The Sprawl"
@@ -1979,6 +2201,11 @@ unchartedworlds:
   - "Uncharted Worlds"
   - "Powered by the Apocalypse"
 
+undying:
+  - "Undying"
+  - "Undying"
+  - "Powered by the Apocalypse"
+
 theveil:
   - "The Veil"
   - "The Veil"
@@ -1993,6 +2220,12 @@ worldofdungeons:
   - "World-of-Dungeons"
   - "World of Dungeons"
   - "Powered by the Apocalypse"
+
+#PROPHECY 2nd EDITION
+prophecy2:
+  - "Prophecy 2"
+  - "Prophecy 2"
+  - "Prophecy 2nd Edition"
 
 #PROWLERS & PARAGONS ULTIMATE EDITION
 prowlersandparagons:
@@ -2021,6 +2254,23 @@ quarts:
   - "QUARTS"
   - "Q.U.A.R.T.S."
   - "QUARTS"
+
+#RATS IN THE WALLS
+ratsinthewall:
+  - "Rats in the Walls"
+  - "Rats in the Walls"
+  - "Rats in the Walls"
+
+ratsinthewalls2:
+  - "RatasEnLasParedes"
+  - "Ratas En Las Paredes"
+  - "Rats in the Walls"
+
+#RASPBERRY HEAVEN
+raspberryheaven:
+  - "Raspberry Heaven"
+  - "Raspberry Heaven"
+  - "Raspberry Heaven"
 
 #REMNANTS
 remnants:
@@ -2075,6 +2325,11 @@ l5rfantasyflight:
   - "Roll-and-Keep System"
 
 #ROLEMASTER
+middleearthrp:
+  - "MERP"
+  - "Middle Earth Role Playing"
+  - "Rolemaster Standard System"
+
 rolemaster1e:
   - "Rolemaster_1E"
   - "Rolemaster 1st Edition"
@@ -2167,6 +2422,12 @@ sentinalcomics:
   - Sentinel Comics RPG
   - Sentinel Comics RPG
   - "Sentinel Comics: the Roleplaying Game"
+
+#SEVEN DEADLY SINS
+sevendeadlysins:
+  - "Seven Deadly Sins"
+  - "Seven Deadly Sins"
+  - "Seven Deadly Sins"
 
 #SEVENTH SEA
 7thsea:
@@ -2268,6 +2529,11 @@ spycraft:
   - "Spycraft 2.0"
   - "Spycraft"
 
+stargatesg1:
+  - "StargateSG-1"
+  - "Stargate SG 1"
+  - "Spycraft"
+
 #SOLAR ECHOES
 solarechoes:
   - "Solar Echoes"
@@ -2279,6 +2545,12 @@ solipstry:
   - "Solipstry"
   - "Solipstry"
   - "Solipstry"
+
+#SONG OF SWORDS
+songofswords:
+  - "Song_of_Swords"
+  - "Song of Swords"
+  - "Song of Swords"
 
 #STANDARD RPG SYSTEM
 metallicguardian:
@@ -2352,17 +2624,11 @@ stargatecoalition:
   - "Stargate Coalition"
   - "Stargate SG-1: Roleplaying Game"
 
-#STRAIGHT TO VHS
-straighttovhs:
-  - "StraightToVHS"
-  - "Straight to VHS"
-  - "Straight to VHS"
-
-#STRIKE
-strike:
-  - "Strike!"
-  - "Strike!"
-  - "Strike!"
+#STORIES UNTOLD
+storiesuntold:
+  - "Stories Untold"
+  - "Stories Untold"
+  - "Stories Untold"
 
 #STORYTELLER SYSTEM
 aberrant:
@@ -2517,6 +2783,24 @@ scion2e:
   - "Scion Second Edition"
   - "Storypath"
 
+#STRAIGHT TO VHS
+straighttovhs:
+  - "StraightToVHS"
+  - "Straight to VHS"
+  - "Straight to VHS"
+
+#STRAIN
+strain:
+  - "Strain"
+  - "Strain"
+  - "Strain"
+
+#STRIKE
+strike:
+  - "Strike!"
+  - "Strike!"
+  - "Strike!"
+
 #SVAVELVINTER
 svavelvinter:
   - "Svavelvinter"
@@ -2524,6 +2808,11 @@ svavelvinter:
   - "Svavelvinter"
 
 #SWORDS ADN WIZARDRY
+forcoinandblood:
+  - "For Coin and blood"
+  - "For Coin and Blood"
+  - "Swords & Wizardry"
+
 swordsandwiz:
   - "Swords_&_Wizardry"
   - "Swords & Wizardry"
@@ -2550,6 +2839,12 @@ blueplanetv2:
   - "Blue Planet V2"
   - "Blue Planet"
   - "Synergy Game System"
+
+#SYNTHICIDE
+synthcide:
+  - "Synthicide"
+  - "Synthicide"
+  - "Synthicide"
 
 #TAGMAR
 tagmar:
@@ -2581,17 +2876,40 @@ tenrazero:
   - "Tenra Bansho Zero"
   - "Tenra Bansho Zero"
 
+#TERROR INFINITY
+terrorinfinity:
+  - "Terror Infinity"
+  - "Terror Infinity"
+  - "Terror Infinity"
+
+terrorinfinityfx:
+  - "Terror Infinity - (FX)"
+  - "Terror Infinity FX"
+  - "Terror Infinity"
+
 #TESORO Y GLORIA
 tesoroygloria:
   - "Tesoro y Gloria"
   - "Tesoro y Gloria"
   - "Tesoro y Gloria"
-
+ 
 #THIS IS NOT A TEST
 thisisnotatest:
   - This_Is_Not_A_Test
   - This Is Not A Test
   - This Is Not A Test
+
+#THRASH
+karyudensetsu:
+  - "Karyu Densetsu"
+  - "Karyu Densetsu"
+  - "Thrash"
+
+#THROUGH THE BREACH
+throughthebreach:
+  - "Through The Breach"
+  - "Through The Breach"
+  - "Through The Breach"
 
 #TIGRES VOLANtS
 tigresvolants:
@@ -2660,6 +2978,12 @@ bigeyessmallmouth3esimple:
   - "BESM3rd"
   - "Big Eyes Small Mouth: 3rd Edition (Simple)"
   - "Tri-Stat dX"
+
+#TRUDVANG CHORNICLES
+trudvangchronicles:
+  - "Trudvang Chronicles"
+  - "Trudvang Chronicles"
+  - "Trudvang Chronicles"
 
 #TROLLBABE
 trollbabe:
@@ -2742,12 +3066,28 @@ victoriana2e:
   - "Victoriana 2nd Edition"
   - "Victoriana 2nd Edition"
 
+#VELOCITY SYSTEM
+shinobigami:
+  - "Shinobi_Gami_Chinese_Traditional"
+  - "Shinobi Gami"
+  - "Velocity System"
+
+magicalogica:
+  - "Magica_Logia"
+  - "Magica Logia"
+  - "Velocity System"
+
 #VIEJA ESCUELA
 viejaescuela:
   - "Vieja-escuela"
   - "Vieja Escuela"
   - "Vieja Escuela"
 
+#VILLIANS AND VIGILANTES
+villiansandvigilantes:
+  - "Villains and Vigilantes"
+  - "Villains and Vigilantes"
+  - "Villains and Vigilantes"
 
 #VOID
 thevoid:
@@ -2874,6 +3214,12 @@ witchhunter2e:
   - "Witch Hunter 2nd Edition"
   - "Witch Hunter"
 
+#THE WITCHER
+witcher:
+  - "TheWitcher"
+  - "The Witcher"
+  - "The Witcher"
+
 #WURM
 wurm:
   - "Wurm"
@@ -2928,6 +3274,16 @@ arkhamhorror:
   - "Arkham Horror"
   - "Arkham Horror"
   - "Arkham Horror"
+
+metaladventure:
+  - "Metal Adventures"
+  - "Metal Adventures"
+  - "Metal Adventures"
+
+gaslands:
+  - "gaslands"
+  - "Gaslands"
+  - "Gaslands"
 
 #DEPRECATED SHEETS
 #These sheets are no longer selectable in the menu
