--- a/approved.yaml
+++ b/approved.yaml
@@ -3021,3 +3021,10 @@ degenesisadvanced:
   - "Degenesis-henry4k"
   - "Degenesis (Advanced)"
   - "Degenesis"
+
+  ##New since last maintaince update
+allforone:
+  - "AllforOne"
+  - "All for One"
+  - "Ubiquity"
+
