added lateast sheet

--- a/approved.yaml
+++ b/approved.yaml
@@ -314,107 +314,107 @@ basicroleplayingexp:
 basicroleplaying:
   - "Basic_Roleplaying"
   - "Basic Roleplaying"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 callofcthuluspanish:
   - "Call_of_Cthulhu_Spanish"
   - "Call of Cthulhu 5th Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 callofcthulhu6e:
   - "Call_of_Cthulhu_6th_Ed"
   - "Call of Cthulhu 6th Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 callofcthulu6efr:
   - "Call_of_Cthulhu_6th_Ed_French"
   - "Call of Cthulhu 6th Edition (French)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 coc7e:
   - "Call_of_Cthulhu_7th_Ed"
   - "Call of Cthulhu 7th Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 coc7ecn:
   - "Call_of_Cthulhu_7th_Ed_Chinese_Traditional"
   - "Call of Cthulhu 7th Edition (Chinese Traditional)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 coc7efr:
   - "Call_of_Cthulhu_7th_Ed_French"
   - "Call of Cthulhu 7th Edition (French)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 coc7ede:
   - "Call_of_Cthulhu_7th_Ed - German"
   - "Call of Cthulhu 7th Edition (German)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 callofcthulhuda:
   - "Call_of_Cthulhu_DA"
   - "Call of Cthulhu: Dark Ages"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 cthulhutech:
   - "CthulhuTech_1ed"
   - "Cthulhu Tech"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 cultosinnombrables:
   - "Cultos-innombrables-hitos"
   - "Cultos Innombrables (Spanish)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 deltagreen:
   - "Delta Green"
   - "Delta Green"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 drakarochdemoner:
   - "Drakar och Demoner 6.0"
   - "Drakar och Demoner 6.0 (Swedish)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 thelaundry:
   - "The Laundry"
   - "The Laundry"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 mutant1984:
   - "Mutant(1984)"
   - "Mutant (1984)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 runequest3ed:
   - "Runequest3"
   - "RuneQuest 3rd Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 runequest6:
   - "Runequest_6"
   - "RuneQuest 6th Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 runequest6fr:
   - "Runequest_6_FR"
   - "RuneQuest: 6th Edition (French)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 runequest6es:
   - "Runequest_6_ES"
   - "RuneQuest 6th Edition (Spanish)"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 runequestglorantha:
   - RunequestGQS
   - RuneQuest Glorantha
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 stormbringer:
   - "Stormbringer"
   - "Stormbringer"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
 
 #BASH ULTIMATE EDITIOn
 bashultimateed:
@@ -3004,6 +3004,11 @@ twilight2000:
   - "Twilight 2000"
 
 #UBIQUITY
+allforone:
+  - "AllforOne"
+  - "All for One"
+  - "Ubiquity"
+
 hollowearthexpedition:
   - "HollowEarthExpedition"
   - "Hollow Earth Expedition"
@@ -3381,7 +3386,7 @@ basicfantasy:
 callofcthulu:
   - "Call_of_Cthulhu"
   - "Call of Cthulhu 5th Edition"
-  - "Basic Roleplaying System"
+  - "Basic Role-Playing"
   - "hidden"
 
 cyphersystem:
