add White Star, sepearte Hero Quests

--- a/approved.yaml
+++ b/approved.yaml
@@ -1475,16 +1475,11 @@ herokids:
   - "Hero Kids"
   - "Hero Kids"
 
-#HERO QUEST
-heroquest:
-  - "HeroQuest"
-  - "Hero Quest"
-  - "Hero Quest"
-
+#HEROQUEST
 heroquestglorantha:
   - Heroquest_Glorantha
   - HeroQuest Glorantha
-  - "Hero Quest"
+  - "HeroQuest"
 
 #HERO SYSTEM 6th EDITION
 herosystem6e:
@@ -2828,6 +2823,11 @@ whitelies:
   - "White Lies"
   - "Swords & Wizardry"
 
+whitestar:
+- "White Star"
+- "White Star"
+- "Swords & Wizardry"
+
 #SYMBAROUM
 symbaroum:
   - "Symbaroum"
@@ -3279,6 +3279,11 @@ arkhamhorror:
   - "Arkham Horror"
   - "Arkham Horror"
   - "Arkham Horror"
+
+heroquest:
+  - "HeroQuest"
+  - "Hero Quest"
+  - "Hero Quest"
 
 metaladventure:
   - "Metal Adventures"
