--- a/approved.yaml
+++ b/approved.yaml
@@ -370,6 +370,12 @@ deltagreen:
   - "Delta Green"
   - "Delta Green"
   - "Basic Role-Playing"
+  - hidden
+
+deltagreen2:
+  - "Delta Green"
+  - "Delta Green"
+  - "Basic Role-Playing"
 
 drakarochdemoner:
   - "Drakar och Demoner 6.0"
