--- a/approved.yaml
+++ b/approved.yaml
@@ -1579,6 +1579,11 @@ kidsonbikes:
   - "Kids on Bikes"
   - "Kids on Bikes"
 
+kidsonbikesofficial:
+  - "Kids on Bikes Official"
+  - "Kids on Bikes by Renegade Game Studios"
+  - "Kids on Bikes"
+
 #KROMORE
 kromore:
   - "Kromore"
