fixed name on kob

--- a/approved.yaml
+++ b/approved.yaml
@@ -1581,7 +1581,7 @@ kidsonbikes:
 
 kidsonbikesofficial:
   - "Kids on Bikes Official"
-  - "Kids on Bikes by Renegade Game Studios"
+  - "Kids on Bikes by Hunters Entertainment"
   - "Kids on Bikes"
 
 #KROMORE
